# auro

./: .gitignore  README.md  TODO.md
.githooks/: pre-commit  (+1 more)
auro_be/: .env_example  Cargo.toml
auro_be/migrations/: 20260408000001_initial.sql  20260409033514_strategies.sql  20260410222606_backtesting.sql  20260414210555_live_trading.sql  20260514120000_live_trades_journal_enrichment.sql  20260518000000_dynamic_position_sizing.sql  20260519000000_account_snapshots.sql  20260520000000_signal_events.sql  20260521000000_instrument_risk_params.sql  20260525210000_add_curator_mode_to_live_strategies.sql  20260525213000_add_bid_ask_to_candles.sql  20260526000000_add_strategy_version.sql  20260608000000_questrade_tokens.sql  20260608100000_wealthsimple_accounts.sql  20260608110000_wealthsimple_positions.sql
auro_be/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
auro_be/src/api/: account.rs  backtest.rs  brokers.rs  candles.rs  evaluator.rs  health.rs  indicators.rs  live_strategies.rs  mod.rs  pipeline.rs  positions.rs  questrade.rs  rules.rs  strategies.rs  wealthsimple.rs  ws.rs
auro_be/src/brokers/: client.rs  mod.rs
auro_be/src/engine/: aggregator.rs  donchian.rs  grid.rs  indicators.rs  kfold.rs  live.rs  ma_filter.rs  macd.rs  mean_reversion.rs  mod.rs  pipeline.rs  risk_defaults.rs  rsi_reversion.rs  rules.rs  stats.rs  strategy.rs  trend_following.rs  types.rs
auro_be/src/oanda/: aggregator.rs  backfill.rs  client.rs  models.rs  stream.rs
auro_be/tests/: evaluator_api.rs  positions_api.rs  router_smoke.rs  rules_api.rs  sizing_integration.rs
(+243 files in other folders)
