[package]
name = "auro"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework + async runtime
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for OANDA API)
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10" }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Environment config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

[[bin]]
name = "run_backtests"
path = "src/bin/run_backtests.rs"
